<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent" xmlns:app="http://schemas.android.com/apk/res-auto"
              android:layout_alignParentTop="true"
              android:layout_centerHorizontal="true"
              android:orientation="vertical"
              android:keepScreenOn="true">

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

        <TextView
                android:id="@+id/textView1"
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                android:text="@string/ip" />

        <EditText
                android:id="@+id/editText1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/myIP"
                android:text="@string/myIP"
                android:inputType="number"
        />

    </LinearLayout>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone">

        <TextView
                android:id="@+id/textView2"
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                android:text="@string/port" />

        <EditText
                android:id="@+id/editText2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint=""
                android:text="@string/myPort"
                android:inputType="number"
        />

    </LinearLayout>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone" >

        <TextView
                android:id="@+id/textView3"
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                android:text="@string/name" />

        <EditText
                android:id="@+id/editText3"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint=""
        />

    </LinearLayout>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal">

        <Button
                android:id="@+id/button1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="OnClick"
                android:text="@string/button1"
                android:backgroundTint="@color/colorPrimary"/>

        <!--<Button
                android:id="@+id/button6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="OnClick"
                android:text="@string/button6"
                android:backgroundTint="@color/colorYellow"/>

        <Button
                android:id="@+id/button2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="OnClick"
                android:text="@string/button2"
                android:backgroundTint="@color/colorAccent"/>-->

        <Button
                android:id="@+id/button7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="OnClick"
                android:text="@string/button7"
                android:backgroundTint="@color/colorYellow"/>

    </LinearLayout>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

        <!--<Button
                android:id="@+id/button3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="OnClick"
                android:text="@string/button3" />

        <Button
                android:id="@+id/button4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="OnClick"
                android:text="@string/button4" />

        <Button
                android:id="@+id/button5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="OnClick"
                android:text="@string/button5" />-->

    </LinearLayout>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
        <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:layout_weight="1"
                android:textColor="@android:color/black"/>
        <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:layout_weight="1"
                android:textColor="@android:color/black"/>
    </LinearLayout>
    <LinearLayout android:layout_width="match_parent" android:layout_height="match_parent">
        <TextView
                android:id="@+id/accdata"
                android:layout_width="wrap_content" android:layout_height="wrap_content"
                android:textColor="@android:color/black"
        android:textSize="30sp"/>
    </LinearLayout>
    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:layout_marginBottom="150dp">
        <com.github.ybq.android.spinkit.SpinKitView
                android:visibility="invisible"
                xmlns:app="http://schemas.android.com/apk/res-auto"
                android:id="@+id/spin_kit"
                style="@style/SpinKitView.FadingCircle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                app:SpinKit_Color="@color/colorAccent" />
    </LinearLayout>
</LinearLayout>